maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:3: error: not found: value surBiscuit
    if(!estFaceMur() || !surBiscuit()){
                         ^RandomMouseMaze:13: error: not found: value surBiscuit
  if(surBiscuit()){
     ^