maze.randommouse.RandomMouseMaze.scala.code
override def run() {
    if(!estFaceMur() || !surBiscuit()){
      avance();
    } else {
      var r = random3();
      if(r == 1){
        droite();
      } else {
        gauche();
      }
    }
  if(surBiscuit()){
    prendBiscuit();
  }
}